[JSC][GTK] glib RunLoop does not accept negative start interval https://bugs.webkit.org/show_bug.cgi?id=170775

Reviewed by Saam Barati.

Source/JavaScriptCore:

* heap/GCActivityCallback.cpp:
(JSC::GCActivityCallback::scheduleTimer):

Source/WTF:

RunLoop::Timer for glib does not accept negative start interval.
We use 0_s if the given value is negative.

* wtf/glib/RunLoopGLib.cpp:
(WTF::RunLoop::TimerBase::secondsUntilFire):

Canonical link: https://commits.webkit.org/187862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215454 268f45cc-cd09-0410-ab3c-d52691b4dbfc