Source/WTF/wtf/RunLoop.h
@@ -84,12 +84,12 @@ public:
         WTF_EXPORT_PRIVATE explicit TimerBase(RunLoop&);
         WTF_EXPORT_PRIVATE virtual ~TimerBase();
 
-        void startRepeating(double repeatInterval) { start(repeatInterval, true); }
+        void startRepeating(double repeatInterval) { startInternal(repeatInterval, true); }
         void startRepeating(std::chrono::milliseconds repeatInterval) { startRepeating(repeatInterval.count() * 0.001); }
         void startRepeating(Seconds repeatInterval) { startRepeating(repeatInterval.value()); }
-        void startOneShot(double interval) { start(interval, false); }
-        void startOneShot(std::chrono::milliseconds interval) { start(interval.count() * 0.001, false); }
-        void startOneShot(Seconds interval) { start(interval.value(), false); }
+        void startOneShot(double interval) { startInternal(interval, false); }
+        void startOneShot(std::chrono::milliseconds interval) { startOneShot(interval.count() * 0.001); }
+        void startOneShot(Seconds interval) { startOneShot(interval.value()); }
 
         WTF_EXPORT_PRIVATE void stop();
         WTF_EXPORT_PRIVATE bool isActive() const;
@@ -103,6 +103,11 @@ public:
 #endif
 
     private:
+        void startInternal(double nextFireInterval, bool repeat)
+        {
+            start(std::max(nextFireInterval, 0.0), repeat);
+        }
+
         WTF_EXPORT_PRIVATE void start(double nextFireInterval, bool repeat);
 
         Ref<RunLoop> m_runLoop;
